--- a/src/scss/empire/_base/_section.scss
+++ b/src/scss/empire/_base/_section.scss
@@ -48,19 +48,10 @@ section {
             margin-top: ($section-header-min-height - $section-header-font-size) / 2; // Top/bottom margin is half of the remainder of the min-height minus the font size (i.e. vertically center the h3)
             margin-bottom: ($section-header-min-height - $section-header-font-size) / 2; // Top/bottom margin is half of the remainder of the min-height minus the font size (i.e. vertically center the h3)
         }
-    }
 
-    .cui-row {
-        padding: $section-row-padding;
-
-        @include pointbreak($bp-desktop) {
-            padding: $section-row-padding;
-        }
-
-        [class*="cui-col-"],
-        [class*="emp-col-"] {
-            padding: 4px 0 2px 0;
-            margin: 1px 0;
+        // Vertically align standalone "fields" by giving them the same line-height as the title's height
+        .emp-field {
+            line-height: $section-header-font-size;
         }
     }
 
@@ -112,50 +103,5 @@ section {
     li {
         display: block;
         float: left;
-    }
-}
-
-.emp-col-half {
-    width: 100%;
-
-    // Side by side on large screens
-    @include pointbreak($bp-tablet) {
-        width: 50%;
-        float: left;
-    }
-
-
-    // Second col becomes a new "row"
-    & + .emp-col-half {
-        padding: $section-row-padding;
-
-        @include pointbreak($bp-tablet) {
-            padding: 0;
-        }
-    }
-
-    // Right-aligned column with nothing to the left of it
-    // Sticks to the left for small
-    &.cui-pull-right {
-        text-align: left;
-
-        // Floats right for medium
-        @include pointbreak($bp-tablet) {
-            text-align: left;
-            float: right;
-        }
-
-        // Floats and aligns right for large
-        @include pointbreak($bp-desktop) {
-            text-align: left;
-        }
-    }
-
-    // Inside button groups
-    .emp-button-group & {
-        // The left and right sides often have different amounts of buttons so a 50/50 split doesn't work (one side may wrap unnecessarily). So we use `table-cell` to let them divide the width as needed.
-        display: table-cell;
-        width: auto;
-        // margin: 0;
     }
 }
